Hide overflow on header to prevent ugly wrapping
Also made min  height 44 not just static so the icons still show

--- a/jquery.gridster.responsive.css
+++ b/jquery.gridster.responsive.css
@@ -2,7 +2,7 @@
     list-style: none;
 }
 .gridster{ display: none}
-.gridster .panel-heading{ height: 44px}
+.gridster .panel-heading{ min-height: 44px; overflow:hidden}
 .gridster .panel-body{
 	height:inherit;
 	overflow-y: scroll;
